--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="70NuuT1LpT0uGdSk6grCyls0H3MTlbMZLvKAU-n3EU0" />
     <title>Word Battle Zones - The Ultimate Word Game</title>
     <meta name="description" content="Challenge your friends in the ultimate word battle! Think fast, type faster, and dominate the arena." />
     <meta name="author" content="Word Battle Zones" />
+    <meta name="title" content="Friends List | Connect, Chat & Game With Your Friends" />
+    <meta name="description" content="View and manage your friends list. Accept requests, invite friends to games, chat instantly, and track online status in real-time." />
+    <meta name="keywords" content="friends list, game invites, online friends, social gaming, chat with friends, real-time status, friend requests, multiplayer invite, user connections, friend management" />
+    <meta name="author" content="YourAppName or Developer Name" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wordbattlezone.vercel.app/friends" />
+    <meta property="og:title" content="Friends List | Connect, Chat & Game With Your Friends" />
+    <meta property="og:description" content="Manage friendships and invite players to games with live status updates and messaging." />
+    <meta property="og:image" content="https://wordbattlezone.vercel.app/preview-image.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://wordbattlezone.vercel.app/friends" />
+    <meta name="twitter:title" content="Friends List | Connect, Chat & Game With Your Friends" />
+    <meta name="twitter:description" content="Build your social network, accept requests, and play with friends anytime." />
+    <meta name="twitter:image" content="https://wordbattlezone.vercel.app/preview-image.jpg" />
+
 
     <meta property="og:title" content="Word Battle Zones - The Ultimate Word Game" />
     <meta property="og:description" content="Challenge your friends in the ultimate word battle! Think fast, type faster, and dominate the arena." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://wordbattlezone.vercel.app/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://wordbattlezone.vercel.app/opengraph-image-p98pqg.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
