--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     <meta property="og:url" content="https://wordbattlezone.vercel.app/friends" />
     <meta property="og:title" content="Friends List | Connect, Chat & Game With Your Friends" />
     <meta property="og:description" content="Manage friendships and invite players to games with live status updates and messaging." />
-    <meta property="og:image" content="https://wordbattlezone.vercel.app/preview-image.jpg" />
+    <meta property="og:image" content="https://wordbattlezone.vercel.app/logoo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://wordbattlezone.vercel.app/friends" />
     <meta name="twitter:title" content="Friends List | Connect, Chat & Game With Your Friends" />
     <meta name="twitter:description" content="Build your social network, accept requests, and play with friends anytime." />
-    <meta name="twitter:image" content="https://wordbattlezone.vercel.app/preview-image.jpg" />
+    <meta name="twitter:image" content="https://wordbattlezone.vercel.app/logoo.png" />
 
 
     <meta property="og:title" content="Word Battle Zones - The Ultimate Word Game" />
     <meta property="og:description" content="Challenge your friends in the ultimate word battle! Think fast, type faster, and dominate the arena." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://wordbattlezone.vercel.app/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://wordbattlezone.vercel.app/logoo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://wordbattlezone.vercel.app/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://wordbattlezone.vercel.app/logoo.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
