--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Word Battle Zones - The Ultimate Word Game</title>
     <meta name="description" content="Challenge your friends in the ultimate word battle! Think fast, type faster, and dominate the arena." />
     <meta name="author" content="Word Battle Zones" />
-    <meta name="title" content="Friends List | Connect, Chat & Game With Your Friends" />
+    <meta name="title" content="Word Battle Zones - The Ultimate Word Game } Connect, Chat & Game With Your Friends" />
     <meta name="description" content="View and manage your friends list. Accept requests, invite friends to games, chat instantly, and track online status in real-time." />
     <meta name="keywords" content="friends list, game invites, online friends, social gaming, chat with friends, real-time status, friend requests, multiplayer invite, user connections, friend management" />
     <meta name="author" content="YourAppName or Developer Name" />
